--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello.eot?59413290');
-  src: url('../fonts/fontello.eot?59413290#iefix') format('embedded-opentype'),
-       url('../fonts/fontello.woff2?59413290') format('woff2'),
-       url('../fonts/fontello.woff?59413290') format('woff'),
-       url('../fonts/fontello.ttf?59413290') format('truetype'),
-       url('../fonts/fontello.svg?59413290#fontello') format('svg');
+  src: url('../fonts/fontello.eot?86020124');
+  src: url('../fonts/fontello.eot?86020124#iefix') format('embedded-opentype'),
+       url('../fonts/fontello.woff2?86020124') format('woff2'),
+       url('../fonts/fontello.woff?86020124') format('woff'),
+       url('../fonts/fontello.ttf?86020124') format('truetype'),
+       url('../fonts/fontello.svg?86020124#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../fonts/fontello.svg?59413290#fontello') format('svg');
+    src: url('../fonts/fontello.svg?86020124#fontello') format('svg');
   }
 }
 */
@@ -62,6 +62,7 @@
 .icon-location:before { content: '\e805'; } /* '' */
 .icon-right-open:before { content: '\e806'; } /* '' */
 .icon-right-open-1:before { content: '\e807'; } /* '' */
+.icon-zoom-in:before { content: '\e808'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
